--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,11 @@
 .Verify-Page-bg {
-  background-image: url("./image/bg.png");
+  background-image: url("./image/hogwarts.png");
   background-repeat: no-repeat;
   background-size: cover;
 }
 
 .Verify-Page-rain {
-  background-image: url("./image/rain.png");
+  background-image: url("./image/sortinghat.png");
   animation: rain 1s linear infinite;
 }
 
@@ -23,7 +23,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("./image/thunder.png");
+  background-image: url("./image/harry-potter.png");
   background-repeat: no-repeat;
   top: -4rem;
   transform: rotate(180deg);
